tests/parser/expr_parser/snapshots/r#mod__parser__expr_parser__literal_parser__parse_negative_int.snap
---
source: tests/parser/expr_parser/literal_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 12,
        },
        kind: GlobalConst {
            name: "int",
            value_type: None,
            def_val: [
                ExprToken {
                    range: Range {
                        start: 10,
                        end: 11,
                    },
                    kind: Operator(
                        "-",
                    ),
                },
                ExprToken {
                    range: Range {
                        start: 11,
                        end: 12,
                    },
                    kind: IntLiteral(
                        5,
                    ),
                },
            ],
        },
    },
]
